Fixed spanish translation of Settings. Added copyright notice.

--- a/locale/en_US/Strings.properties
+++ b/locale/en_US/Strings.properties
@@ -27,13 +27,13 @@ SETTINGS_PANEL_TITLE=Freevana Player's Settings
 SETTINGS_LABEL=Settings
 SETTINGS_START_BUTTON=Start Freevana!
 # Settings - Db
-SETTINGS_DATABASE_INFO=In order yo use Freevana Player you need to get a copy of Freevana's database. If you don't have one, you may be able to obtain a copy at <a href='http://tirino.github.com/freevana'>http://tirino.github.com/freevana</a>
+SETTINGS_DATABASE_INFO=In order yo use Freevana Player you need to get a copy of Freevana's database. If you don't have one, you may be able to obtain a copy at <a href='http://tirino.github.com/freevana'>http://tirino.github.com/freevana/</a>
 SETTINGS_DATABASE_LABEL=Freevana's database
 SETTINGS_DATABASE_NONE_LABEL=None
 SETTINGS_DATABASE_NONE_ERROR=‹‹ You need to set a database
 SETTINGS_DATABASE_SET_LABEL=Change
 # Settings - Subs
-SETTINGS_SUBTITLES_INFO=The best way to enjoy Freevana Player is to have a local copy of the subtitles. You may be able to obtain a copy at <a href='http://tirino.github.com/freevana'>http://tirino.github.com/freevana</a>
+SETTINGS_SUBTITLES_INFO=The best way to enjoy Freevana Player is to have a local copy of the subtitles. You may be able to obtain a copy at <a href='http://tirino.github.com/freevana'>http://tirino.github.com/freevana/</a>
 SETTINGS_SUBTITLES_LABEL=Subtitles
 SETTINGS_SUBTITLES_NONE_LABEL=None
 SETTINGS_SUBTITLES_SET_LABEL=Set folder
