--- a/locale/es_ES/Strings.properties
+++ b/locale/es_ES/Strings.properties
@@ -23,16 +23,16 @@ BROWSE_FOR_SUBTITLES=Elija la carpeta con los subtítulos de Freevana
 INVALID_SUBTITLES_DIR=La carpeta no es válida. Debe contener las subcarpetas "movies" y "series".
 # Settings
 SETTINGS_PANEL_TITLE=Freevana Player's Settings
-SETTINGS_LABEL=Settings
+SETTINGS_LABEL=Configuración
 SETTINGS_START_BUTTON=Iniciar Freevana!
 # Settings - Db
-SETTINGS_DATABASE_INFO=Para usar Freevana Player necesitas una copia de la base de datos de Freevana. Si aún no tienes una, es posible conseguir una copia en <a href='http://tirino.github.com/freevana'>http://tirino.github.com/freevana</a>
+SETTINGS_DATABASE_INFO=Para usar Freevana Player necesitas una copia de la base de datos de Freevana. Si aún no tienes una, es posible conseguir una copia en <a href='http://tirino.github.com/freevana'>http://tirino.github.com/freevana/</a>
 SETTINGS_DATABASE_LABEL=Freevana's database
 SETTINGS_DATABASE_NONE_LABEL=Ninguna
 SETTINGS_DATABASE_NONE_ERROR=‹‹ Necesita una base de datos
 SETTINGS_DATABASE_SET_LABEL=Cambiar
 # Settings - Subs
-SETTINGS_SUBTITLES_INFO=Para disfrutar mejor de Freevana Player es recomendable tener una copia local de los subtítulos. Es posible conseguir una copia en <a href='http://tirino.github.com/freevana'>http://tirino.github.com/freevana</a>
+SETTINGS_SUBTITLES_INFO=Para disfrutar mejor de Freevana Player es recomendable tener una copia local de los subtítulos. Es posible conseguir una copia en <a href='http://tirino.github.com/freevana'>http://tirino.github.com/freevana/</a>
 SETTINGS_SUBTITLES_LABEL=Subtítulos
 SETTINGS_SUBTITLES_NONE_LABEL=Ninguna
 SETTINGS_SUBTITLES_SET_LABEL=Elegir carpeta
