Subtitles: size can be selected, they are now opaque. Link for videos can now be displayed. Update checking. Fix for videos without subtitles. Workaround for Linux Subs button bug.

--- a/locale/en_US/Strings.properties
+++ b/locale/en_US/Strings.properties
@@ -3,7 +3,7 @@ SUBTILES_LANGUAGE=Subtitles language
 BACK_BUTTON=< Back
 MAIN_LABEL=Double click to load a Movie or to see a Series' Seasons
 SEASONS_LABEL=Double click to load a Seasons' episode list, or to play an Episode:
-NO_EPISODES_LABEL=Sorry, there are no episodes for the selected Season.
+NO_EPISODES_LABEL=›› Sorry, there are no episodes for the selected Season.
 SEASONS_AND_EPISODES=Seasons and Episodes for
 #
 FILTER_MOVIES=Filter Movies
@@ -37,5 +37,18 @@ SETTINGS_SUBTITLES_INFO=The best way to enjoy Freevana Player is to have a local
 SETTINGS_SUBTITLES_LABEL=Subtitles
 SETTINGS_SUBTITLES_NONE_LABEL=None
 SETTINGS_SUBTITLES_SET_LABEL=Set folder
+SETTINGS_SUBTITLES_SIZE_LABEL=Subtitles size
+SETTINGS_SUBTITLES_SIZE_SMALL=Small
+SETTINGS_SUBTITLES_SIZE_NORMAL=Normal
+SETTINGS_SUBTITLES_SIZE_BIG=Big
 # Megaupload
 MEGAUPLOAD_LINK_UNAVAILABLE=The video is not currently available. Please choose another one.
+# Other
+DOWNLOAD_STOP_BUTTON=Stop and get download link
+DOWNLOAD_SEPARATOR_LABEL=Or you can download the video and subtitles!
+DOWNLOAD_SUBTITLE_LABEL=Open Subtitle Folder
+# Updates
+UPDATES_NEW_PLAYER_VERSION=New version of Freevana Player
+UPDATES_DOWNLOAD_NEW_PLAYER=Download new version
+UPDATES_NEW_DATABASE_VERSION=New version of Freevana Database
+UPDATES_DOWNLOAD_NEW_DATABASE=Download new version
