--- a/locale/es_ES/Strings.properties
+++ b/locale/es_ES/Strings.properties
@@ -3,7 +3,7 @@ SUBTILES_LANGUAGE=Idioma de los subtítulos
 BACK_BUTTON=< Volver
 MAIN_LABEL=Haga doble clic para cargar una Película o ver las Temporadas de una Serie
 SEASONS_LABEL=Haga doble clic para cargar una Temporada o para reproducir un Episodio:
-NO_EPISODES_LABEL=Lo sentimos, no hay episodios para la Temporada seleccionada.
+NO_EPISODES_LABEL=›› Lo sentimos, no hay episodios para la Temporada seleccionada.
 SEASONS_AND_EPISODES=Temporadas y Episodios para
 FILTER_MOVIES=Filtrar Películas
 FILTER_SERIES=Filtrar Series
@@ -36,5 +36,18 @@ SETTINGS_SUBTITLES_INFO=Para disfrutar mejor de Freevana Player es recomendable 
 SETTINGS_SUBTITLES_LABEL=Subtítulos
 SETTINGS_SUBTITLES_NONE_LABEL=Ninguna
 SETTINGS_SUBTITLES_SET_LABEL=Elegir carpeta
+SETTINGS_SUBTITLES_SIZE_LABEL=Tamaño de los subtítulos
+SETTINGS_SUBTITLES_SIZE_SMALL=Chico
+SETTINGS_SUBTITLES_SIZE_NORMAL=Normal
+SETTINGS_SUBTITLES_SIZE_BIG=Grande
 # Megaupload
 MEGAUPLOAD_LINK_UNAVAILABLE=El video no está disponible en este momento. Por favor, elija otro.
+# Other
+DOWNLOAD_STOP_BUTTON=Detener y ver el link de descarga
+DOWNLOAD_SEPARATOR_LABEL=O, puede bajar el video y acceder al subtitulo:
+DOWNLOAD_SUBTITLE_LABEL=Ver carpeta con Subtítulo
+# Updates
+UPDATES_NEW_PLAYER_VERSION=Nueva versión de Freevana Player
+UPDATES_DOWNLOAD_NEW_PLAYER=Descargar la nueva versión
+UPDATES_NEW_DATABASE_VERSION=Nueva versión de la Base de Datos
+UPDATES_DOWNLOAD_NEW_DATABASE=Descargar la nueva versión
