Fixed bug that prevented DB from being updated in Windows. Added support for Updates texts.

--- a/locale/en_US/Strings.properties
+++ b/locale/en_US/Strings.properties
@@ -31,7 +31,7 @@ SETTINGS_DATABASE_INFO=In order yo use Freevana Player you need to get a copy of
 SETTINGS_DATABASE_LABEL=Freevana's database
 SETTINGS_DATABASE_NONE_LABEL=None
 SETTINGS_DATABASE_NONE_ERROR=‹‹ You need to set a database
-SETTINGS_DATABASE_SET_LABEL=Change
+SETTINGS_DATABASE_SET_LABEL=Update
 # Settings - Subs
 SETTINGS_SUBTITLES_INFO=The best way to enjoy Freevana Player is to have a local copy of the subtitles. You may be able to obtain a copy at <a href='http://tirino.github.com/freevana'>http://tirino.github.com/freevana/</a>
 SETTINGS_SUBTITLES_LABEL=Subtitles
@@ -49,6 +49,6 @@ DOWNLOAD_SEPARATOR_LABEL=Or you can download the video and subtitles!
 DOWNLOAD_SUBTITLE_LABEL=Open Subtitle Folder
 # Updates
 UPDATES_NEW_PLAYER_VERSION=New version of Freevana Player
-UPDATES_DOWNLOAD_NEW_PLAYER=Download new version
+UPDATES_DOWNLOAD_NEW_PLAYER=Download new version?
 UPDATES_NEW_DATABASE_VERSION=New version of Freevana Database
-UPDATES_DOWNLOAD_NEW_DATABASE=Download new version
+UPDATES_DOWNLOAD_NEW_DATABASE=Download new version?
