--- a/locale/es_ES/Strings.properties
+++ b/locale/es_ES/Strings.properties
@@ -30,7 +30,7 @@ SETTINGS_DATABASE_INFO=Para usar Freevana Player necesitas una copia de la base 
 SETTINGS_DATABASE_LABEL=Freevana's database
 SETTINGS_DATABASE_NONE_LABEL=Ninguna
 SETTINGS_DATABASE_NONE_ERROR=‹‹ Necesita una base de datos
-SETTINGS_DATABASE_SET_LABEL=Cambiar
+SETTINGS_DATABASE_SET_LABEL=Actualizar
 # Settings - Subs
 SETTINGS_SUBTITLES_INFO=Para disfrutar mejor de Freevana Player es recomendable tener una copia local de los subtítulos. Es posible conseguir una copia en <a href='http://tirino.github.com/freevana'>http://tirino.github.com/freevana/</a>
 SETTINGS_SUBTITLES_LABEL=Subtítulos
@@ -48,6 +48,6 @@ DOWNLOAD_SEPARATOR_LABEL=O, puede bajar el video y acceder al subtitulo:
 DOWNLOAD_SUBTITLE_LABEL=Ver carpeta con Subtítulo
 # Updates
 UPDATES_NEW_PLAYER_VERSION=Nueva versión de Freevana Player
-UPDATES_DOWNLOAD_NEW_PLAYER=Descargar la nueva versión
+UPDATES_DOWNLOAD_NEW_PLAYER=Descargar la nueva versión?
 UPDATES_NEW_DATABASE_VERSION=Nueva versión de la Base de Datos
-UPDATES_DOWNLOAD_NEW_DATABASE=Descargar la nueva versión
+UPDATES_DOWNLOAD_NEW_DATABASE=Descargar la nueva versión?
