Updated code including new Video Player

--- a/locale/en_US/Strings.properties
+++ b/locale/en_US/Strings.properties
@@ -14,9 +14,10 @@ HEADER_SERIES=Series
 HEADER_SEASONS=Seasons
 HEADER_EPISODES=Episodes
 #
-VIDEO_LOADING=Loading video...
 CONTACTING_REMOTE_SERVER=Contacting remote server... it can take about a minute...
+VIDEO_LOADING=Loading video...
 VIDEO_WILL_START=Video will start in... 
+VIDEO_NOT_AVAILABLE=Video not available. Try again later or choose another video.
 # Downloadables
 BROWSE_FOR_DB=Select the freevana.db file
 YOU_MUST_CHOOSE_DB=You must select a database file
@@ -41,6 +42,9 @@ SETTINGS_SUBTITLES_SIZE_LABEL=Subtitles size
 SETTINGS_SUBTITLES_SIZE_SMALL=Small
 SETTINGS_SUBTITLES_SIZE_NORMAL=Normal
 SETTINGS_SUBTITLES_SIZE_BIG=Big
+SETTINGS_PREFERRED_PLAYER_LABEL=Video Player
+SETTINGS_PREFERRED_PLAYER_NEW=New
+SETTINGS_PREFERRED_PLAYER_OLD=Old
 # Megaupload
 MEGAUPLOAD_LINK_UNAVAILABLE=The video is not currently available. Please choose another one.
 # Other
@@ -52,3 +56,6 @@ UPDATES_NEW_PLAYER_VERSION=New version of Freevana Player
 UPDATES_DOWNLOAD_NEW_PLAYER=Download new version?
 UPDATES_NEW_DATABASE_VERSION=New version of Freevana Database
 UPDATES_DOWNLOAD_NEW_DATABASE=Download new version?
+# HELP
+HELP_LABEL=Help
+HELP_LOADING=Loading...
