--- a/locale/es_ES/Strings.properties
+++ b/locale/es_ES/Strings.properties
@@ -13,9 +13,10 @@ HEADER_SERIES=Series
 HEADER_SEASONS=Temporadas
 HEADER_EPISODES=Episodios
 #
-VIDEO_LOADING=Cargando video...
 CONTACTING_REMOTE_SERVER=Conectando con el servidor remoto... puede tardar alrededor de un minuto en comenzar...
+VIDEO_LOADING=Cargando video...
 VIDEO_WILL_START=El video comenzará en... 
+VIDEO_NOT_AVAILABLE=Video no disponible. Pruebe más tarde o elija otro video.
 # Downloadables
 BROWSE_FOR_DB=Busque la base de datos 'freevana.db'
 YOU_MUST_CHOOSE_DB=Debe seleccionar una base de datos
@@ -40,6 +41,9 @@ SETTINGS_SUBTITLES_SIZE_LABEL=Tamaño de los subtítulos
 SETTINGS_SUBTITLES_SIZE_SMALL=Chico
 SETTINGS_SUBTITLES_SIZE_NORMAL=Normal
 SETTINGS_SUBTITLES_SIZE_BIG=Grande
+SETTINGS_PREFERRED_PLAYER_LABEL=Reproductor de Video
+SETTINGS_PREFERRED_PLAYER_NEW=Nuevo
+SETTINGS_PREFERRED_PLAYER_OLD=Viejo
 # Megaupload
 MEGAUPLOAD_LINK_UNAVAILABLE=El video no está disponible en este momento. Por favor, elija otro.
 # Other
@@ -51,3 +55,6 @@ UPDATES_NEW_PLAYER_VERSION=Nueva versión de Freevana Player
 UPDATES_DOWNLOAD_NEW_PLAYER=Descargar la nueva versión?
 UPDATES_NEW_DATABASE_VERSION=Nueva versión de la Base de Datos
 UPDATES_DOWNLOAD_NEW_DATABASE=Descargar la nueva versión?
+# HELP
+HELP_LABEL=Ayuda
+HELP_LOADING=Cargando...
