Added support for Wupload

--- a/locale/en_US/Strings.properties
+++ b/locale/en_US/Strings.properties
@@ -45,8 +45,9 @@ SETTINGS_SUBTITLES_SIZE_BIG=Big
 SETTINGS_PREFERRED_PLAYER_LABEL=Video Player
 SETTINGS_PREFERRED_PLAYER_NEW=New
 SETTINGS_PREFERRED_PLAYER_OLD=Old
-# Megaupload
-MEGAUPLOAD_LINK_UNAVAILABLE=The video is not currently available. Please choose another one.
+# FileHost
+FILEHOST_LINK_UNAVAILABLE=The video is not currently available. Please choose another one.
+FILEHOST_SEND_RECAPTCHA=Send ReCaptcha
 # Other
 DOWNLOAD_STOP_BUTTON=Stop and get download link
 DOWNLOAD_SEPARATOR_LABEL=Or you can download the video and subtitles!
