--- a/locale/es_ES/Strings.properties
+++ b/locale/es_ES/Strings.properties
@@ -44,8 +44,9 @@ SETTINGS_SUBTITLES_SIZE_BIG=Grande
 SETTINGS_PREFERRED_PLAYER_LABEL=Reproductor de Video
 SETTINGS_PREFERRED_PLAYER_NEW=Nuevo
 SETTINGS_PREFERRED_PLAYER_OLD=Viejo
-# Megaupload
-MEGAUPLOAD_LINK_UNAVAILABLE=El video no está disponible en este momento. Por favor, elija otro.
+# FileHost
+FILEHOST_LINK_UNAVAILABLE=El video no está disponible en este momento. Por favor, elija otro.
+FILEHOST_SEND_RECAPTCHA=Enviar ReCaptcha
 # Other
 DOWNLOAD_STOP_BUTTON=Detener y ver el link de descarga
 DOWNLOAD_SEPARATOR_LABEL=O, puede bajar el video y acceder al subtitulo:
